# mtips5s_whisk_qt

./: .env.dev  .env.prod  .gitignore  Makefile  build.spec  coverage.json  main.py  pyproject.toml  requirements.txt  setup.py
.manager/: current_task.md  final_report.md  implementation.md  iteration_log.md  progress-report.md  requirements.md  test-report.md  ux-feedback.md
app/: __init__.py  app.py  captcha_bridge_server.py  captcha_sidecar_manager.py  main_window.py  preferences.py  prompt_normalizer.py  utils.py  version.py
captcha/: capture-sidecar.js
excaptcha/: background.js  content_script.js  manifest.json  popup.html  popup.js
pucaptcha/: capture-sidecar.js  package.json
scripts/: Dockerfile.win  Dockerfile.win.nuitka  Dockerfile.win.pyinstaller  build_mac.sh  build_mac_nuitka.sh  build_win.bat  build_win_docker.sh  build_win_nuitka.sh  build_win_remote.sh  docker-compose.build.yml  docker-compose.nuitka.yml  docker-compose.pyinstaller.yml  installer.iss  launcher.c  launcher_bin
tests/: __init__.py  conftest.py  test_api_config.py  test_auth_manager.py  test_captcha_bridge_server.py  test_captcha_sidecar_manager.py  test_collapsible_section.py  test_config_panel.py  test_cookie_api.py  test_cookie_manager_dialog.py  test_dashboard_page.py  test_data_table.py  test_flow_api.py  test_generation_worker.py  test_items_page.py  test_log_panel.py  test_login_dialog.py  test_main_window.py  test_mock_api.py  test_models.py  test_page_handlers.py  test_preferences.py  test_project_manager_dialog.py  test_project_tab_bar.py  test_prompt_generator_dialog.py  (+15 more)
(+91 files in other folders)
